WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125852
[GStreamer] video/audio seeking is not unified.
https://bugs.webkit.org/show_bug.cgi?id=125852
Summary
[GStreamer] video/audio seeking is not unified.
Piotr Grad
Reported
2013-12-17 04:42:04 PST
Seeking should be unified in that way we are always sure negative playback rate is always taken into account.
Attachments
Patch
(6.14 KB, patch)
2013-12-17 05:22 PST
,
Piotr Grad
no flags
Details
Formatted Diff
Diff
patch
(6.09 KB, patch)
2013-12-23 03:39 PST
,
Piotr Grad
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Piotr Grad
Comment 1
2013-12-17 04:42:29 PST
Already working on solution.
Piotr Grad
Comment 2
2013-12-17 05:22:07 PST
Created
attachment 219411
[details]
Patch
Philippe Normand
Comment 3
2013-12-17 05:50:24 PST
Comment on
attachment 219411
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=219411&action=review
> Source/WebCore/ChangeLog:11 > + Test: media/video-seek-with-negative-playback.html
This is skipped in EFL but not in GTK, it seems. I guess it can now be unskipped?
> Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:614 > +bool MediaPlayerPrivateGStreamer::seekIncludingRate(gint64 position, float rate, GstSeekFlags seekType)
Hum what about doSeek() ? Having only the rate mentioned in the name is a bit odd.
Piotr Grad
Comment 4
2013-12-23 03:39:46 PST
Created
attachment 219904
[details]
patch
Piotr Grad
Comment 5
2013-12-23 03:55:01 PST
(In reply to
comment #3
)
> (From update of
attachment 219411
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=219411&action=review
> > > Source/WebCore/ChangeLog:11 > > + Test: media/video-seek-with-negative-playback.html > > This is skipped in EFL but not in GTK, it seems. I guess it can now be unskipped? > > > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:614 > > +bool MediaPlayerPrivateGStreamer::seekIncludingRate(gint64 position, float rate, GstSeekFlags seekType) > > Hum what about doSeek() ? Having only the rate mentioned in the name is a bit odd.
Unfortunatelly this test is still flaky for EFL becouse of some race condition.
WebKit Commit Bot
Comment 6
2013-12-23 05:11:42 PST
Comment on
attachment 219904
[details]
patch Clearing flags on attachment: 219904 Committed
r160992
: <
http://trac.webkit.org/changeset/160992
>
WebKit Commit Bot
Comment 7
2013-12-23 05:11:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug